# plover_last_translation

./: README.md  README.rst  plover_last_translation.py  setup.cfg
plover_last_translation/: macro.py  meta.py
