[metadata]
name = plover_last_translation
version = 0.0.2
description = Macro plugins for Plover to repeat output.
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_last_translation
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev6
py_modules =
    plover_last_translation

[options.entry_points]
plover.macro =
    repeat_last_translation = plover_last_translation:repeat_last_translation
    repeat_last_word = plover_last_translation:repeat_last_word
    repeat_last_fragment = plover_last_translation:repeat_last_fragment
    repeat_last_character = plover_last_translation:repeat_last_character
